<resources>
    <string name="app_name">Quiz App</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="placeholder">Placeholder</string>
    <string name="icon_desc">Icon</string>
    <string name="username_insert">Insert Username</string>
    <string name="email_insert">Insert Email</string>
    <string name="password_insert">Insert Password</string>
    <string name="password2_insert">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="sign_in_header">Sign In</string>
    <string name="success_message">%1$s successful.</string>
    <string name="time_left">Time Left: %1$d</string>
    <string name="time_taken">Time Taken: %1$d seconds</string>
    <string name="logout">Logout</string>
    <string name="name_insert">Insert Name</string>
    <string name="category_insert">Insert Category</string>
    <string name="time_limit_insert">Insert Time Limit</string>
    <string name="seconds">Seconds</string>
    <string name="import_csv">Import CSV</string>
    <string name="no_file_selected">No File Selected</string>
    <string name="time_limit_per_question">Time Limit Per Question</string>
    <string name="add">ADD</string>
    <string name="edit">EDIT</string>
    <string name="empty">Nothing to show.</string>
    <string name="manage_students">Manage Students</string>
    <string name="switch_view">View %1$s</string>
    <string name="insert_quiz_id_here">Insert Quiz ID Here</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="quiz_history">Quiz History</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="end_quiz_confirmation">You want to end the quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="score_update">Score updated.</string>
    <string name="your_score">Your Score: %1$d / %2$d</string>
    <string name="score">%1$d / %2$d</string>
    <string name="back">Back</string>
    <string-array name="roles">
        <item>Student</item>
        <item>Teacher</item>
    </string-array>
</resources>