<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/m"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".ui.addQuiz.AddQuizFragment">

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/name_insert"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <EditText
            android:id="@+id/etCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:hint="@string/category_insert"
            android:autofillHints="Name"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/time_limit_per_question"
            android:textSize="@dimen/huge_text_size"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/etTimeLimit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/m"
                android:hint="@string/time_limit_insert"
                android:autofillHints="Time"
                android:inputType="number"
                android:background="@drawable/rounded_edit_text_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seconds"
                android:textSize="@dimen/extra_large_text_size" />

        </LinearLayout>

        <EditText
            android:id="@+id/etUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:padding="@dimen/xs"
            android:hint="@string/no_file_selected"
            android:textSize="@dimen/extra_large_text_size"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:autofillHints="File"
            android:inputType="text"
            android:background="@drawable/rounded_edit_text_bg"
            android:enabled="false" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/import_csv"
            app:cornerRadius="@dimen/xxxs"
            android:elevation="@dimen/xs"
            android:backgroundTint="@color/purple"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m"
            android:text="@string/add"
            app:cornerRadius="@dimen/xxxs"
            android:elevation="@dimen/xs"
            android:backgroundTint="@color/design_default_color_secondary" />

    </LinearLayout>
</layout>