<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/xxxxl">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:text="@string/time_limit_per_question"
                android:textSize="@dimen/huge_text_size"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/etTimeLimit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/m"
                    android:hint="@string/time_limit_insert"
                    android:autofillHints="TimeLimit"
                    android:inputType="number"
                    android:background="@drawable/rounded_edit_text_bg"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/seconds"
                    android:textSize="@dimen/extra_large_text_size" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mbAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:text="@string/add"
                app:cornerRadius="@dimen/xxxs"
                android:elevation="@dimen/xs"
                android:backgroundTint="@color/design_default_color_secondary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>