<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/m"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:text="@string/are_you_sure"
                android:textSize="@dimen/huge_text_size"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:text="@string/end_quiz_confirmation"
                android:textSize="@dimen/small_text_size"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m"
                android:orientation="horizontal" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    app:cornerRadius="@dimen/xxxs"
                    android:elevation="@dimen/xs"
                    android:backgroundTint="@color/design_default_color_secondary" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/m"
                    android:text="@string/no"
                    app:cornerRadius="@dimen/xxxs"
                    android:elevation="@dimen/xs"
                    android:backgroundTint="@color/red" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>